fix: Enhance images on firefox

--- a/src/layout/Header.module.css
+++ b/src/layout/Header.module.css
@@ -22,7 +22,7 @@
 }
 
 .tab {
-  font-weight: 500;
+  font-weight: 600;
   height: rem(38);
   background-color: transparent;
   position: relative;
